# haskell-aoc2022

./: README.md
Day01/: Day01.cabal  Main.hs  README.md  stack.yaml
Day01/src/: Solve.hs
Day01/test/: Test.hs
Day02/: Day02.cabal  Main.hs  README.md  stack.yaml
Day02/src/: Solve.hs
Day02/test/: Test.hs
Day03/: Day03.cabal  Main.hs  README.md  stack.yaml
Day03/src/: Solve.hs
Day03/test/: Test.hs
Day04/: Day04.cabal  Main.hs  README.md  stack.yaml
Day04/src/: Solve.hs
Day04/test/: Test.hs
Day05/: Day05.cabal  Main.hs  README.md  stack.yaml
Day05/src/: Solve.hs
Day05/test/: Test.hs
Day06/: Day06.cabal  Main.hs  README.md  stack.yaml
Day06/src/: Solve.hs
Day06/test/: Test.hs
Day07/: Day07.cabal  Main.hs  README.md
Day07/src/: Solve.hs
Day07/test/: Test.hs
Day08/: Day08.cabal  Main.hs  README.md  stack.yaml
Day08/src/: Solve.hs
Day08/test/: Test.hs
Day09/: Day09.cabal  Main.hs  README.md  stack.yaml
Day09/src/: Solve.hs
Day09/test/: Test.hs
Day10/: Day10.cabal  Main.hs  Makefile  README.md
Day10/src/: Solve.hs
Day10/test/: Test.hs
Day11/: Day11.cabal  Main.hs  README.md  stack.yaml
Day11/src/: Solve.hs
Day11/test/: Test.hs
Day12/: .stylish-haskell.yaml  Day12.cabal  Main.hs  Makefile  README.md
Day12/src/: Solve.hs
Day12/test/: Test.hs
Day13/: Day13.cabal  Main.hs  README.md  stack.yaml
Day13/src/: Solve.hs
Day13/test/: Test.hs
template/: day.hsfiles
