cabal-version:        3.0

name:                 Day05
version:              1
synopsis:             Advent of Code 2022
description:          Haskell solutions for Advent of Code 2022
homepage:             https://github.com/frankhjung/haskell-aoc2022/-/blob/main/README.md
license:              GPL-3.0-only
author:               Frank H Jung
maintainer:           frankhjung@linux.com
copyright:            Copyright © 2022 Frank H Jung
category:             education
build-type:           Simple
extra-source-files:   README.md

library
  hs-source-dirs:     src
  default-language:   Haskell2010
  ghc-options:        -Wall
  exposed-modules:    Solve
  build-depends:      base >= 4 && < 5
                    , array >= 0.5 && < 0.6
                    , attoparsec >= 0.14 && < 0.15
                    , split >= 0.2 && < 0.3
                    , text >= 1.2 && < 1.3

executable            main
  hs-source-dirs:     .
                    , src
  main-is:            Main.hs
  default-language:   Haskell2010
  ghc-options:        -Wall
  other-modules:      Solve
  build-depends:      base
                    , array >= 0.5 && < 0.6
                    , attoparsec >= 0.14 && < 0.15
                    , split >= 0.2 && < 0.3
                    , text >= 1.2 && < 1.3

test-suite            test
  hs-source-dirs:     test
                    , src
  main-is:            Test.hs
  default-language:   Haskell2010
  ghc-options:        -Wall
  type:               exitcode-stdio-1.0
  other-modules:      Solve
  build-depends:      base
                    , array >= 0.5 && < 0.6
                    , attoparsec >= 0.14 && < 0.15
                    , hspec >= 2.7 && < 2.9
                    , split >= 0.2 && < 0.3
                    , text >= 1.2 && < 1.3
